added location/search endpoint
