# backend/config/openapi.yml
@@ -166,6 +166,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FailResponse'
+  /location/search:
+    post:
+      summary: Location search
+      tags:
+        - location
+      operationId: locationSearch
+      security:
+        - apiKey: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              required:
+                - term
+              properties:
+                term:
+                  type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LocationResponse'
+        404:
+          description: Location not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
 
 components:
   securitySchemes:
@@ -177,6 +216,35 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    LocationResponse:
+      type: object
+      properties:
+        city:
+          type: string
+        county:
+          type: string
+        state:
+          type: string
+        postcode:
+          type: string
+        country:
+          type: string
+        country_code:
+          type: string
+        longitude:
+          type: number
+          format: double
+        latitude:
+          type: number
+          format: double
+        state_code:
+          type: string
+        formatted:
+          type: string
+        address_line1:
+          type: string
+        address_line2:
+          type: string
     HelloResponse:
       type: object
       additionalProperties: false
