# backend/src/api/controllers/index.ts
@@ -1,3 +1,4 @@
 export * from './greeting'
 export * from './user'
 export * from './login'
+export * from './location'
